--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "portfolio-v1.0": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0"
   },
