--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@motionone/utils": "^10.18.0",
     "framer-motion": "^11.3.24",
     "portfolio-v1.0": "file:..",
     "react": "^18.3.1",
@@ -17,6 +18,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
+    "resize-observer-polyfill": "^1.5.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
